# nimble

./: CMakeLists.txt  LICENSE  README.md
3rd/nlohmann/: json_helper.hpp
_inc/: event.hpp  log.hpp  mem_pool.hpp  plugin_admin.hpp
cfg/: plat.json
doc/: dump.md  event.md
include/: api.hpp  config.hpp  macro.hpp  nb.hpp  platform.hpp  prop.hpp
include/core/: concurrent.hpp  dump.hpp  file.hpp  memory.hpp  sys.hpp  thread_pool.hpp  version.hpp
include/itf/: i_ctx.hpp  i_evt.hpp  i_log.hpp  i_mempool.hpp  i_plugin.hpp  itf.hpp
integrate_test/: itf_demo.hpp  plugin_qtUI.cpp  plugin_test1.cpp  plugin_test2.cpp
script/: resolve_dump.sh
src/: event.cpp  log.cpp  platform.cpp  plugin_admin.cpp  sys.cpp
src/core/: dump.cpp
starter/: console.cpp  qtUI.cpp
test/: test_concurrent.cpp  test_event.cpp  test_file.cpp  test_iii_mempl.cpp  test_itf.cpp  test_json_helper.cpp  test_log.cpp  test_memory.cpp  test_mempool.cpp  test_prop.cpp  test_sys.cpp  test_threadpool.cpp  test_version.cpp
